# Food-App

./: AccountPage.qml  Banner.qml  CMakeLists.txt  CustomTextField.qml  Description_1.qml  Description_2.qml  DesertsCarts.qml  FoodAppMain.qml  FoodCarts.qml  Footer.qml  LoadingPage.qml  Login.qml  Main.qml  Models.qml  README.md  SearchBox.qml  SearchPage.qml  SerchBox.qml  Signup.qml  main.cpp  qrc.qrc
source/: database.cpp  database.h  main.cpp
ui/: AccountPage.qml  Banner.qml  CustomTextField.qml  Description_1.qml  Description_2.qml  DessertsCarts.qml  FoodAppMain.qml  FoodCarts.qml  Footer.qml  LoadingPage.qml  Login.qml  Main.qml  Models.qml  SearchBox.qml  SearchPage.qml  Signup.qml  SoupCarts.qml
